<?xml version="1.0"?>
<package format="2">
    <name>qt_ros</name>
    <version>1.0.0</version>
    <description>The qt_ros package</description>
    <maintainer email="bxzhang@robosense.cn">zhangbaoxian</maintainer>
    <license>BSD</license>
    <buildtool_depend>catkin</buildtool_depend>

    <depend>sensor_msgs</depend>
    <depend>std_msgs</depend>
</package>

